package edu.advising.states.viewstates;

import edu.advising.contexts.ViewContext;
import edu.advising.states.ViewState;

public class PermissionManagementViewState implements ViewState {
    private PermissionManagementViewState instance = new PermissionManagementViewState();

    @Override
    public boolean requiresAuthentication() {
        return true;
    }

    @Override
    public void handleAction() {

    }

    @Override
    public void enter(ViewContext viewContext) {

    }

    @Override
    public void exit() {

    }

    @Override
    public void render() {

    }

    @Override
    public String getViewName() {
        return "PERMISSION_MANAGEMENT";
    }

    public PermissionManagementViewState getInstance() {
        return this.instance;
    }
}
